--- a/app/jfrog-logs/default/data/ui/views/artifactory.xml
+++ b/app/jfrog-logs/default/data/ui/views/artifactory.xml
@@ -15,13 +15,16 @@
       <html>
         <ul id="tabs" class="nav nav-tabs">
           <li class="active">
-            <a href="#" class="toggle-tab" data-toggle="tab" data-elements="requests1,requests2,requests3,requests4" data-token="requests_control">Requests</a>
+            <a href="#" class="toggle-tab" data-toggle="tab" data-elements="requests1,requests2" data-token="requests_control">Requests</a>
           </li>
           <li>
             <a href="#" class="toggle-tab" data-toggle="tab" data-elements="application1,application2" data-token="application_control">Application</a>
           </li>
           <li>
             <a href="#" class="toggle-tab" data-toggle="tab" data-elements="audit1,audit2,audit3" data-token="audit_control">Audit</a>
+          </li>
+          <li>
+            <a href="#" class="toggle-tab" data-toggle="tab" data-elements="docker1,docker2,docker3,docker4" data-token="application_control">Docker</a>
           </li>
         </ul>
       </html>
@@ -60,6 +63,96 @@
   <row id="requests2">
     <panel>
       <chart>
+        <title>Top 10 IPs By Uploads</title>
+        <search>
+          <query>$requests_control$ (sourcetype="jfrog.rt.artifactory.request" OR log_source="jfrog.rt.artifactory.request") response_content_length!="-1" | eval gb=response_content_length/1073741824 | stats sum(gb) as upload_size by remote_address | top limit=10 remote_address,upload_size | fields - count,percent</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+        <option name="charting.axisTitleX.text">Remote Address</option>
+        <option name="charting.axisTitleY.text">GBs</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.drilldown">all</option>
+        <option name="refresh.display">progressbar</option>
+      </chart>
+    </panel>
+    <panel>
+      <chart>
+        <title>Top 10 IPs Downloads</title>
+        <search>
+          <query>$requests_control$ (sourcetype="jfrog.rt.artifactory.request" OR log_source="jfrog.rt.artifactory.request") request_content_length!="-1" | eval gb=request_content_length/1073741824 | stats sum(gb) as download_size by remote_address | top limit=10 remote_address,download_size | fields - count,percent</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+        <option name="charting.axisTitleX.text">Remote Address</option>
+        <option name="charting.axisTitleY.text">GBs</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.drilldown">all</option>
+        <option name="refresh.display">progressbar</option>
+      </chart>
+    </panel>
+  </row>
+  <row id="docker1">
+    <panel>
+      <single>
+        <title>Dockerhub Pull Requests Trends Per 6 Hours</title>
+        <search>
+          <query>* "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*" | timechart count(message) span=6h as DockerPullRequests</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+      </single>
+    </panel>
+    <panel>
+      <chart>
+        <title>Dockerhub Pull Requests in rolling 6 Hr window</title>
+        <search>
+          <query>* "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*" | timechart span=1h count(message) as Count | streamstats sum(Count) as Count window=6 | eval warning = 100 | eval critical = 200</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.axisTitleY.text">Count</option>
+        <option name="charting.chart">column</option>
+        <option name="charting.chart.overlayFields">critical,warning</option>
+        <option name="charting.chart.stackMode">stacked</option>
+        <option name="charting.drilldown">all</option>
+        <option name="charting.legend.placement">none</option>
+        <option name="refresh.display">progressbar</option>
+      </chart>
+    </panel>
+  </row>
+  <row id="docker2">
+    <panel>
+      <table>
+        <title>Dockerhub Pull Requests Every 6 Hours</title>
+        <search>
+          <query>* "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*" | timechart count(message) span=6h as DockerPullRequests</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+        <option name="drilldown">cell</option>
+      </table>
+    </panel>
+    <panel>
+      <chart>
+        <title>Dockerhub Pull Requests Total</title>
+        <search>
+          <query>* "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*" | timechart count(message) as Count</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
+        </search>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.chart">area</option>
+        <option name="charting.drilldown">all</option>
+        <option name="refresh.display">progressbar</option>
+      </chart>
+    </panel>
+  </row>
+  <row id="docker3">
+    <panel>
+      <chart>
         <title>Accessed Images</title>
         <search>
           <query>$requests_control$ (sourcetype="jfrog.rt.artifactory.request" OR log_source="jfrog.rt.artifactory.request") request_url="/api/docker/*" repo!="NULL" image!="NULL" repo!="" image!="" repo!="latest" | timechart count by image</query>
@@ -87,7 +180,7 @@
       </chart>
     </panel>
   </row>
-  <row id="requests3">
+  <row id="docker4">
     <panel>
       <chart>
         <title>Data Transfers (GBs) Uploads By Repo</title>
@@ -118,39 +211,6 @@
         <option name="charting.chart.stackMode">stacked</option>
         <option name="charting.drilldown">all</option>
         <option name="charting.legend.placement">none</option>
-        <option name="refresh.display">progressbar</option>
-      </chart>
-    </panel>
-  </row>
-  <row id="requests4">
-    <panel>
-      <chart>
-        <title>Top 10 IPs By Uploads</title>
-        <search>
-          <query>$requests_control$ (sourcetype="jfrog.rt.artifactory.request" OR log_source="jfrog.rt.artifactory.request") response_content_length!="-1" | eval gb=response_content_length/1073741824 | stats sum(gb) as upload_size by remote_address | top limit=10 remote_address,upload_size | fields - count,percent</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
-        </search>
-        <option name="charting.axisTitleX.text">Remote Address</option>
-        <option name="charting.axisTitleY.text">GBs</option>
-        <option name="charting.chart">bar</option>
-        <option name="charting.chart.stackMode">default</option>
-        <option name="charting.drilldown">all</option>
-        <option name="refresh.display">progressbar</option>
-      </chart>
-    </panel>
-    <panel>
-      <chart>
-        <title>Top 10 IPs Downloads</title>
-        <search>
-          <query>$requests_control$ (sourcetype="jfrog.rt.artifactory.request" OR log_source="jfrog.rt.artifactory.request") request_content_length!="-1" | eval gb=request_content_length/1073741824 | stats sum(gb) as download_size by remote_address | top limit=10 remote_address,download_size | fields - count,percent</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
-        </search>
-        <option name="charting.axisTitleX.text">Remote Address</option>
-        <option name="charting.axisTitleY.text">GBs</option>
-        <option name="charting.chart">bar</option>
-        <option name="charting.drilldown">all</option>
         <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
