JFrog Log Analytics Splunk v0.8.0 Dockerhub changes for rate monitoring

--- a/app/jfrog-logs/default/data/ui/views/artifactory.xml
+++ b/app/jfrog-logs/default/data/ui/views/artifactory.xml
@@ -151,10 +151,11 @@
       <single>
         <title>Dockerhub Pull Requests Trends Per 6 Hours</title>
         <search>
-          <query>$docker_control$ "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/latest" "docker.io" | timechart count(message) span=6h as DockerPullRequests</query>
+          <query>$docker_control$ "downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !="downloading */manifests/sha256:*" | timechart count(message) span=6h as DockerPullRequests</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
         </search>
+        <option name="refresh.display">progressbar</option>
       </single>
     </panel>
     <panel>
@@ -173,14 +174,13 @@
         <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
-
   </row>
   <row id="docker2">
     <panel>
       <chart>
         <title>Dockerhub Pull Requests in rolling 6 Hr window</title>
         <search>
-          <query>$docker_control$ "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/latest" "docker.io" | timechart span=1h count(message) as Count | streamstats sum(Count) as Count window=6 | eval warning = 100 | eval critical = 200</query>
+          <query>$docker_control$ "downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !="downloading */manifests/sha256:*" | timechart span=1h count(message) as Count | streamstats sum(Count) as Count window=6 | eval warning = 100 | eval critical = 200</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
         </search>
@@ -198,7 +198,7 @@
       <chart>
         <title>Dockerhub Pull Requests Total</title>
         <search>
-          <query>$docker_control$ "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/latest" "docker.io" | timechart count(message) as Count</query>
+          <query>$docker_control$ "downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !="downloading */manifests/sha256:*" | timechart count(message) as Count</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
         </search>
@@ -214,7 +214,7 @@
   <row id="docker3">
     <panel>
       <chart>
-        <title>Top 10 Users By Dockerhub Pulls</title>
+        <title>Top 10 Users By Docker Pulls</title>
         <search>
           <query>$docker_control$ log_source="jfrog.rt.artifactory.access" "list\.manifest" "ACCEPTED DEPLOY" | top limit=10 username </query>
           <earliest>$field1.earliest$</earliest>
@@ -230,7 +230,7 @@
     </panel>
     <panel>
       <chart>
-        <title>Top 10 IPs By Dockerhub Pulls</title>
+        <title>Top 10 IPs By Docker Pulls</title>
         <search>
           <query>$docker_control$ log_source="jfrog.rt.artifactory.access" "list\.manifest" "ACCEPTED DEPLOY" | top limit=10 ip </query>
           <earliest>$field1.earliest$</earliest>
